# graphql-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  RoomBookings.sql  app.py  bookings.json  buildings.json  check.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  res.txt  rooms.json  scrapers.md  types.txt
.github/workflows/: docker.yml
app/: init.sql  main.py  models.py
app/helpers/: auth.py  hasura.py  postgres.py  timer.py
db_dump/: RoomBookings.sql
metadata/databases/: databases.yaml
metadata/databases/postgres/tables/: public_bookings.yaml  public_buildings.yaml  public_rooms.yaml  tables.yaml
migrations/postgres/1687744364_init/: up.sql
migrations/postgres/1687744364_init_freerooms/: down.sql  up.sql
