[tool.poetry]
name = "hasuragres"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
typing-extensions = "^4.7.1"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
